<resources>
    <string name="app_name">Rode Kruis</string>
    <string name="naam_gebruiker">Naam gebruiker</string>
    <string name="naam_rklc">Naam RKLC</string>
    <string name="kenteken">Kenteken</string>
    <string name="datum">Datum en tijd</string>
    <string name="vandaag">Vandaag</string>
    <string name="accessories">Accessories</string>
    <string name="laadkabel">Laadkabel</string>
    <string name="fietsendrager">Fietsendrager</string>
    <string name="rijplaten">Rijplaten</string>
    <string name="versturen">Versturen</string>
    <string name="diversen">Diversen</string>
    <string name="email_cc">Email CC</string>
    <string name="ik_ga_akkoord_om_mijn_gegevens_te_sturen">Ik ga akkoord om mijn gegevens te sturen</string>
    <string name="disselslot">Disselslot</string>
    <string name="inname">Inname</string>
    <string name="uitgifte">Uitgifte</string>
    <string name="ik_ga_akkoord_om_mijn_gegevens_te_sturen_volgens_avg">Ik ga akkoord om mijn gegevens te sturen volgens avg</string>
    <string name="fietsnummer">Fietsnummer</string>
    <string name="fiets_papieren">Fiets papieren</string>
    <string name="fietsaanhanger">Fietsaanhanger</string>
    <string name="ehbo_tas">Ehbo tas</string>
    <string name="voorlampje">Voorlampje</string>
    <string name="vlaggetje">Vlaggetje</string>
    <string name="quad_tas">Quadtas</string>
    <string name="quad_aanhanger">Quadaanhanger</string>
    <string name="quad_helm">Quadhelm</string>
    <string name="fietsmand">Fietsmand</string>
    <string name="telefoon">Telefoon</string>
    <string name="kentekenplaten">Kentekenplaten</string>
    <string name="buiten_dienst_bordje">Buiten dienst bordje</string>
    <string name="navigatie">Navigatie</string>
    <string name="schadevrij">Het voertuig is schadevrij</string>
    <string name="papieren">Papieren</string>
    <string name="blauwe_krat">Blauwe krat</string>
    <string name="stryker">Stryker</string>
    <string name="startkabels">Startkabels</string>
    <string name="hoofdsteun">Hoofdsteun</string>
    <string name="kussentje">Kussentje</string>
    <string name="ik_heb_de_koppeling_van_de_aanhanger_gecontroleerd">Ik heb de koppeling van de fietsaanhanger gecontroleerd</string>
    <string name="sjorbanden_x4">Sjorbanden x4</string>
    <string name="de_aanhanger_gaat_los_mee">De aanhanger gaat los mee</string>
    <string name="fietshelm">Fietshelm</string>
    <string name="fietskleding">Fietskleding</string>
    <string name="motorhelm">Motorhelm</string>
    <string name="de_quad_gaat_los_mee">De quad gaat los mee</string>

</resources>