<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".FirstActivity">

        <EditText
            android:id="@+id/naamGebruiker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/naam_gebruiker"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/controleur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/naam_rklc"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/kenteken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/kenteken"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/datum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:editable="false"
                android:hint="@string/datum"
                android:padding="5dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Deprecated,MissingConstraints" />

            <Button
                android:id="@+id/btndatum"
                android:layout_width="95dp"
                android:layout_height="38dp"
                android:layout_marginEnd="5dp"
                android:text="@string/vandaag"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/emailCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/email_cc"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:text="@string/accessories"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkKabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/kabel" />

            <CheckBox
                android:id="@+id/checkNummerplaten"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/nummerplaten" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkDieselslot"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/disselslot" />

            <CheckBox
                android:id="@+id/checkFietsendrager"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fietsendrager" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkRijplaten"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rijplaten" />

            <CheckBox
                android:id="@+id/checkAutoPapieren"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/auto_papieren" />

        </LinearLayout>


        <EditText
            android:id="@+id/diversen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/diversen"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/AVG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:text="@string/ik_ga_akkoord_om_mijn_gegevens_te_sturen"
                tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/verstuur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/versturen"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>