<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".FirstActivity">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/inname"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/inname" />

            <RadioButton
                android:id="@+id/uitgifte"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/uitgifte"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/naamGebruiker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/naam_gebruiker"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/controleur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/naam_rklc"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/kenteken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kenteken"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/datum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:editable="false"
                    android:hint="@string/datum"
                    android:inputType="none"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="Deprecated,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btndatum"
                android:layout_width="95dp"
                android:layout_height="44dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FD0000"
                android:text="@string/vandaag"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/emailCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_cc"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="TextFields"
            android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:text="@string/accessories"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkQuadtas"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/quad_tas" />

            <CheckBox
                android:id="@+id/checkNummerplaten"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/kentekenplaten" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkDieselslot"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/disselslot" />

            <CheckBox
                android:id="@+id/checkQuadhelm"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/quad_helm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkRijplaten"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rijplaten" />

            <CheckBox
                android:id="@+id/checkVoertuigPapieren"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/quad_papieren" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkQuadaanhanger"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/quad_aanhanger" />

            <Space
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/diversen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diversen"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/schadevrij"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:text="@string/schadevrij"
            tools:ignore="DuplicateIds" />

        <CheckBox
            android:id="@+id/AVG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/ik_ga_akkoord_om_mijn_gegevens_te_sturen_volgens_avg"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/verstuur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#FD0000"
            android:text="@string/versturen"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>